--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "secondreacttest",
+  "homepage": "https://zoromingyu.github.io/carrd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "framer-motion": "^11.3.19",
+    "gh-pages": "^6.1.1",
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
@@ -23,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
