--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secondreacttest",
-  "homepage": "https://zoromingyu.github.io/zoromingyu/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
